salvia_macro/tests/query_ui/fail/return_type_traits.rs
use std::marker::{PhantomData};
use salvia::{query, QueryContext};

struct A(PhantomData<* mut ()>);

#[query]
async fn f(_cx: &QueryContext) -> A {
    todo!()
}

fn main() {}
